@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.15
-%%CreationDate: Fri Mar  3 03:10:24 2000
+%%CreationDate: Fri Mar  3 15:55:45 2000
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
@@ -1011,11 +1011,23 @@ F0(\214le.)2.5 E F1(FILES)72 268.8 Q F3(/etc/zmailer)108 280.8 Q(.conf)
 (\214ce/tr)-.18 E(ansport \(POST)-.15 E(OFFICE/tr)-.18 E(ansport\))-.15
 E(/var/spool/postof)108 328.8 Q(\214ce/queue \(POST)-.18 E
 (OFFICE/queue\))-.18 E F1(SEE ALSO)72 345.6 Q F0
-(router\(8\), mailq\(1\))108 357.6 Q F1 -.45(AU)72 374.4 S(THOR).45 E F0
-(This program authored and cop)108 386.4 Q(yright by:)-.1 E
-(Rayan Zachariassen <rayan@cs.toronto.edu>)108 398.4 Q 2.5(Ap)108 410.4
+(router\(8\), mailq\(1\))108 357.6 Q(RFC 822)108 374.4 Q
+(The basic Internet email format speci\214cation)146.1 E(RFC 1123)108
+386.4 Q -1.11(Va)141.1 G(rious 822 parameter clari\214cations)1.11 E(Se)
+108 410.4 Q -.15(ve)-.25 G(ral e).15 E(xtended SMTP f)-.15 E
+(acilities are implemented:)-.1 E(RFC 1341/1521/2045)108 434.4 Q
+(MIME speci\214cation \(body)95.54 E 2.5(,f)-.65 G(ormats\))-2.5 E
+(RFC 1342/1522/2047)108 446.4 Q(MIME speci\214cation \(headers\))95.54 E
+(RFC 1425/1651/1869)108 458.4 Q(ESMTP EHLO frame)95.54 E -.1(wo)-.25 G
+(rk).1 E(RFC 1428)108 470.4 Q(Basic MIME con)141.1 E -.15(ve)-.4 G
+(rsion rules).15 E(RFC 1892)108 482.4 Q(The Multipart/Report Content T)
+141.1 E(ype)-.8 E(RFC 1893)108 494.4 Q
+(Enhanced Mail System Status Codes)141.1 E(RFC 1894)108 506.4 Q
+(Extensible Message format for DSNs)141.1 E F1 -.45(AU)72 523.2 S(THOR)
+.45 E F0(This program authored and cop)108 535.2 Q(yright by:)-.1 E
+(Rayan Zachariassen <rayan@cs.toronto.edu>)108 547.2 Q 2.5(Ap)108 559.2
 S(lenty of changes and se)-2.5 E -.15(ve)-.25 G(ral real b).15 E
-(ug\214x)-.2 E(es by:)-.15 E(Matti Aarnio <mea@nic.funet.\214>)108 422.4
+(ug\214x)-.2 E(es by:)-.15 E(Matti Aarnio <mea@nic.funet.\214>)108 571.2
 Q 2.5(3M)282.67 768 S(ar 2000)-2.5 E(11)200.67 E EP
 %%Trailer
 end
