@@ -274,8 +274,8 @@ RFC 1428	 Basic MIME conversion rules
 RFC 1830	 ESMTP CHUNKING
 RFC 1854/2197	 ESMTP PIPELINING
 RFC 1891	 ESMTP DSN
+RFC 1893/2034	 ESMTP ENHANCEDSTATUSCODES
 RFC 1985	 ESMTP ETRN
-RFC 2034	 ESMTP ENHANCEDSTATUSCODES
 RFC 2487	 ESMTP STARTTLS
 RFC 2554+M$ Exchange	 ESMTP AUTH LOGIN
 RFC 2554+NetScape	 ESMTP AUTH=LOGIN
