@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.15
-%%CreationDate: Thu Mar  2 23:44:35 2000
+%%CreationDate: Fri Mar  3 15:55:45 2000
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
@@ -427,8 +427,8 @@ Q(ESMTP 8BITMIME)118.32 E(RFC 1427/1653/1870)108 556.8 Q(ESMTP SIZE)
 95.54 E(RFC 1428)108 568.8 Q(Basic MIME con)141.1 E -.15(ve)-.4 G
 (rsion rules).15 E(RFC 1830)108 580.8 Q(ESMTP CHUNKING)141.1 E
 (RFC 1854/2197)108 592.8 Q(ESMTP PIPELINING)118.32 E(RFC 1891)108 604.8
-Q(ESMTP DSN)141.1 E(RFC 1985)108 616.8 Q(ESMTP ETRN)141.1 E(RFC 2034)108
-628.8 Q(ESMTP ENHANCEDST)141.1 E -1.11(AT)-.93 G(USCODES)1.11 E
+Q(ESMTP DSN)141.1 E(RFC 1893/2034)108 616.8 Q(ESMTP ENHANCEDST)118.32 E
+-1.11(AT)-.93 G(USCODES)1.11 E(RFC 1985)108 628.8 Q(ESMTP ETRN)141.1 E
 (RFC 2487)108 640.8 Q(ESMTP ST)141.1 E(AR)-.93 E(TTLS)-.6 E
 (RFC 2554+M$ Exchange)108 652.8 Q(ESMTP A)79.64 E(UTH LOGIN)-.55 E
 (RFC 2554+NetScape)108 664.8 Q(ESMTP A)97.14 E(UTH=LOGIN)-.55 E F1 -.45
